# tetris_console

Tetris_console/: CMakeLists.txt  Tetris_console.sln
Tetris_console/Tetris_console/: CMakeLists.txt  Tetris_console.cpp  Tetris_console.h  Tetris_console.vcxproj  Tetris_console.vcxproj.filters  Tetris_console_tests.cpp  doctest.h
Tetris_console/Tetris_console/Debug/: Tetris_console.exe.recipe  Tetris_console.ilk  vc143.idb
Tetris_console/Tetris_console/Debug/Tetris_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris_console.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris_console/Tetris_console/x64/Debug/: Tetris_console.exe.recipe  Tetris_console.ilk  vc143.idb
Tetris_console/Tetris_console/x64/Debug/Tetris_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris_console.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
